清理config